--- a/app/views/challenges/_discussion_box.html.erb
+++ b/app/views/challenges/_discussion_box.html.erb
@@ -5,7 +5,7 @@
                 <img src="http://cloudspokes.s3.amazonaws.com/Cloud_th_50.jpg" id="ctl00_Body_rptComment_ctl00_imgUser" width="50" height="50" alt="chiragmehta84" /></a>
             <div class="text-holder fr">
                 <div style="width: 480px; overflow-x: auto; overflow-y: hidden">
-                    <p style="padding-bottom: 15px">First thing - Really great challenge! Can I assume that each object will have one external id field viz., ExternalId__c - Text(18). This field will be helpful when doing upsert and also when loading parent child data (based on parent externalid field). Ok?</p>
+                    <p style="padding-bottom: 15px"><%= :comment %></p>
                 </div>
                 <span><a href='profile.html?username=chiragmehta84'>
                     chiragmehta84</a>,&nbsp;&nbsp;Oct. 29, 2011&nbsp;at
