implemented pagination for challenges and members

--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -93,7 +93,7 @@
                 
                 <div class="paging fr">
                     <p class="fr">
-                        <span><a disabled="disabled">First</a>&nbsp;<span class="selected">1</span>&nbsp;<a disabled="disabled">Last</a>&nbsp;</span>
+                        <%= will_paginate @challenges %>
                     </p>
                 </div>
                 <a href="contests.rss" class="get-rss fl">Get RSS for this
