--- a/app/views/members/_member.html.haml
+++ b/app/views/members/_member.html.haml
@@ -9,12 +9,13 @@
                 %a{:href => member_path(member["Name"])}
                   = member["Name"]
                 %span.stats
-                  = "Following:"
-                  = "11"
                   = "Active:"
                   = member["Challenges_Entered__c"]
                   = "# of Wins:"
                   = member["Total_1st_Place__c"].to_i + member["Total_2nd_Place__c"].to_i + member["Total_3st_Place__c"].to_i
+                %span.stats
+                  = "Total Money: "
+                  = number_to_currency(member["Total_Money__c"], :precision => 0)
             .cl= " "
       .user-desc.fr
         %p
