hacked around the issue with the member stylesheet

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,3 +1,6 @@
+		<%= stylesheet_link_tag 'member' %>
+		<%= stylesheet_link_tag 'members' %>
+
         <!-- Page heading -->
         <div class="page-heading">
             <h2 class="melbourne">Members</h2>
