--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,3 +1,6 @@
+= stylesheet_link_tag 'member'
+= stylesheet_link_tag 'members'
+
 .content-wrapper.two-cols-bg
   .widecolumn.fl
     .list-challenges
