--- a/app/views/accounts/details.html.haml
+++ b/app/views/accounts/details.html.haml
@@ -1,3 +1,6 @@
+= stylesheet_link_tag 'member'
+= stylesheet_link_tag 'members'
+
 .content-wrapper.left-sidebar.top-border
   #account
     .sidebar.fl
