--- a/app/views/accounts/school.html.haml
+++ b/app/views/accounts/school.html.haml
@@ -1,3 +1,5 @@
+= stylesheet_link_tag 'member'
+= stylesheet_link_tag 'members'
 .content-wrapper.left-sidebar.top-border
   #account
     .sidebar.fl
