--- a/app/views/accounts/password.html.haml
+++ b/app/views/accounts/password.html.haml
@@ -1,3 +1,6 @@
+= stylesheet_link_tag 'member'
+= stylesheet_link_tag 'members'
+
 .content-wrapper.left-sidebar.top-border
   #account
     .sidebar.fl
@@ -8,31 +11,14 @@
         %h3 Change your password
         = flash[:notice]
         .cl
-        = form_tag("/account/a0GU0000000c8xiMAA/password", :name => "form_password", :method => :post)
-        %label
-          %span
-          Old password:
-        %input.txt{:maxlength => 100, :name => "form_password[old_password]"}
-        .cl
-        %label
-          %span
-          New password:
-        %input.txt{:maxlength => 100, :name => "form_password[new_password]"}
-        .cl
-        %label
-          %span
-          New password:
-        %input.txt{:maxlength => 100, :name => "form_password[new_password]"}
-        .cl
-        %br
-        #button-right.buttons
-          %div{:style => "float:left;padding-right:10px;"}
-            %a.button{:href => "#", :onclick => "document['form_password'].submit()"}
-              %span Submit
-          %div{:style => "float:left"}
-            %a.button{:href => "/account/a0GU0000000c8xiMAA/password"}
-              %span Cancel
-
-
-
-
+        %p To change your password we will email you a temporary passcode. You will then need to use this passcode to change your password.
+        - if @account["Login_Managed_By__c"].eql?('CloudSpokes')
+          = form_tag("/account/password?reset=true", :name => "form_password")
+          %hidden.txt{:maxlength => 100, :name => "form_password[old_password]", :value => "#{current_user.username}"}
+          %br
+          #button-right.buttons
+            %div{:style => "float:left;padding-right:10px;"}
+              %a.button{:href => "#", :onclick => "document['form_password'].submit()"}
+                %span Send me a passcode
+        - else
+          %p You are logging into CloudSpokes with your #{@account["Login_Managed_By__c"]} account. You will need to change your password at #{@account["Login_Managed_By__c"]}.
