--- a/app/views/accounts/password_reset.html.haml
+++ b/app/views/accounts/password_reset.html.haml
@@ -1,14 +1,20 @@
+= stylesheet_link_tag 'member'
+= stylesheet_link_tag 'members'
+
 .content-wrapper.left-sidebar.top-border
   #account
     .sidebar.fl
+      = render 'menu', :selected_item => "change_password"
 
     .widecolumn.fr
       #account
         %p.red
           =flash[:notice]
-        %h3 Define a new password 
+        %h3 Reset your password
+        %p Use the passcode in the email being sent to you to reset your password below.
+        %br
         .cl
-        = form_tag("/reset_password", :name => "form_reset_password", :method => :post)
+        = form_tag("/account/password_reset", :name => "form_reset_password", :method => :post)
         %label
           %span
           Passcode:
@@ -22,7 +28,7 @@
         %label
           %span
           New password:
-        %input.txt{:maxlength => 100, :name => "form_reset_password[new_password]"}
+        %input.txt{:maxlength => 100, :name => "form_reset_password[new_password_again]"}
         .cl
         %br
         #button-right.buttons
