--- a/app/views/accounts/school.html.haml
+++ b/app/views/accounts/school.html.haml
@@ -22,7 +22,7 @@
         .cl
         %label.large
           Years of Experience:
-        %input.txtsm{:maxlength => 100, :name => "", :value => @account["Years_Of_Experience__c"]}
+        %input.txtsm{:maxlength => 100, :name => "form_school[years_of_experience__c]", :value => @account["Years_of_Experience__c"]}
         %label
         .cl
         %label.large
