--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,3 +21,5 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+
+<p><br/>By clicking “Sign Up,” you state the you agree to the <a href="/tos">Terms & Conditions</a> of this website.</p>
