--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,6 +2,10 @@
 //= require_self
 
 @import "compass"
+@import "content"
+@import "global"
+@import "accounts"
+
 
 $bg-blue: #d1e7ed
 $border-blue: #456179
@@ -174,9 +178,28 @@ a.btn
     float: left
     padding: 15px 20px
 
-@import "content"
-@import "global"
-@import "accounts"
+.button
+  cursor: pointer 
+  margin-right: 10px 
+.button, .button span  
+  float: left 
+  display: inline 
+  height: 26px 
+  line-height: 26px 
+  font-size: 14px 
+  color: #fff 
+  padding-left: 44px 
+  background: url(http://cloudspokes.s3.amazonaws.com/button-1.gif) no-repeat 0 0 
+.button span  
+  padding-left: 0 
+  padding-right: 44px 
+  background-position: right 0 
+.button:hover, .button:hover span  
+  text-decoration: none 
+  background-position: 0 -26px 
+.button:hover span  
+  background-position: right -26px 
+
 
 .field_with_errors 
   padding: 2px
